# jp_translation

./: .gitignore  README.md  main.py  pyproject.toml
.kiro/specs/markdown-translator/: .config.kiro  design.md  requirements.md  tasks.md
src/: __init__.py  api_client.py  config.py  exceptions.py  file_service.py  orchestrator.py  translation_service.py
tests/: __init__.py
tests/integration/: __init__.py  test_integration.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_api_client.py  test_file_service.py  test_translation_service.py
